cabal-version:      3.0
name:               exomonad-control-server
version:            0.1.0.0
synopsis:           Unix socket control server for Claude Code++ integration. Receives hook events from exomonad and direct HTTP MCP requests from Claude Code via Unix socket. Provides 7 MCP tools organized in tiers: LSP-only (Tier 1), LLM-enhanced (Tier 2), external orchestration (Tier 3), TUI-interactive (Tier 4), and mailbox communication (Tier 5).
description:        Receives hook events and MCP tool calls from exomonad
                    via NDJSON over Unix socket. Routes to effect handlers.
                    Includes semantic-scout for code exploration via LSP.
license:            MIT
author:             Inanna
build-type:         Simple

data-files:
    templates/scout/*.jinja
    templates/hook/*.jinja

extra-source-files:
    templates/scout/*.jinja
    templates/hook/*.jinja

common warnings
    ghc-options: -Wall -Wincomplete-patterns -Wredundant-constraints -Wunused-packages

library
    import:           warnings
    exposed-modules:
        -- Control server
        ExoMonad.Control.API
        ExoMonad.Control.Protocol
        ExoMonad.Control.Types
        ExoMonad.Control.Server
        ExoMonad.Control.Handler
        ExoMonad.Control.Logging
        ExoMonad.Control.TUIInterpreter
        ExoMonad.Control.Runtime.Paths
        ExoMonad.Control.Runtime.ProcessCompose
        ExoMonad.Control.Hook.Policy
        ExoMonad.Control.Hook.CircuitBreaker
        ExoMonad.Control.Handler.Hook
        ExoMonad.Control.Handler.MCP
        ExoMonad.Control.Observability
        ExoMonad.Control.Interpreters.Traced
        -- Hook implementations
        ExoMonad.Control.Hook.SessionStart
        ExoMonad.Control.Hook.SessionStart.Context
        ExoMonad.Control.Hook.Stop
        ExoMonad.Control.Hook.Stop.Context
        ExoMonad.Control.LSPTools
        ExoMonad.Control.PMTools
        ExoMonad.Control.PMStatus
        ExoMonad.Control.PMPropose
        ExoMonad.Control.MailboxTools
        ExoMonad.Control.ExoTools
        ExoMonad.Control.ExoTools.Internal
        ExoMonad.Control.ExoTools.Status
        ExoMonad.Control.ExoTools.SpawnAgents
        ExoMonad.Control.ExoTools.FilePR
        ExoMonad.Control.ExoTools.FilePR.Context
        ExoMonad.Control.ExoTools.PrReviewStatus
        ExoMonad.Control.TUITools
        ExoMonad.Control.FeedbackTools
        ExoMonad.Control.RoleConfig
        ExoMonad.Control.GHTools
        ExoMonad.Control.Export
        ExoMonad.Control.CodeExtraction
        ExoMonad.Control.Version
        -- StopHook (workflow stages)
        ExoMonad.Control.StopHook.Types
        ExoMonad.Control.StopHook.Graph
        ExoMonad.Control.StopHook.Handlers
        ExoMonad.Control.StopHook.ErrorParser
        ExoMonad.Control.StopHook.Templates
        -- Effects
        ExoMonad.Control.Effects.SshExec
        ExoMonad.Control.Effects.Effector
        ExoMonad.Control.Effects.Cabal
        ExoMonad.Control.Effects.Git
        ExoMonad.Control.Effects.Justfile
        ExoMonad.Control.Effects.DockerCtl
        -- Scout (semantic code exploration)
        ExoMonad.Control.Scout.Types
        ExoMonad.Control.Scout.EdgeTypes
        ExoMonad.Control.Scout.Heuristics
        ExoMonad.Control.Scout.LSP
        ExoMonad.Control.Scout.Templates
        -- DocGen (teaching document generation)
        ExoMonad.Control.Scout.DocGen
        ExoMonad.Control.Scout.DocGen.Types
        ExoMonad.Control.Scout.DocGen.Gemma
        ExoMonad.Control.Scout.DocGen.Teacher
        ExoMonad.Control.Scout.Tools
        -- Graph-based DocGen (exomonad DSL)
        ExoMonad.Control.Scout.Graph
        ExoMonad.Control.Scout.Graph.Types
        ExoMonad.Control.Scout.Graph.Templates
        ExoMonad.Control.Scout.Graph.Templates.Context
        ExoMonad.Control.Scout.Graph.Handlers
        ExoMonad.Control.Scout.Graph.Runner
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        aeson-casing >= 0.2,
        bytestring >= 0.11 && < 1,
        base64-bytestring >= 1.2,
        async,
        directory,
        filepath,
        process,
        network >= 3.1 && < 4,
        stm >= 2.5 && < 3,
        fast-logger >= 3.0 && < 4,
        time >= 1.9 && < 2,
        -- Servant / HTTP
        servant,
        servant-server,
        warp,
        wai,
        wai-extra,
        uuid,
        -- Scout dependencies
        containers >= 0.6 && < 1,
        freer-simple,
        exomonad-core,
        exomonad-training-generator,
        exomonad-teaching,
        exomonad-cabal-interpreter,
        exomonad-github-interpreter,
        exomonad-git-interpreter,
        exomonad-env-interpreter,
        exomonad-justfile-interpreter,
        exomonad-worktree-interpreter,
        exomonad-filesystem-interpreter,
        exomonad-zellij-interpreter,
        exomonad-gemini-interpreter,
        exomonad-observability-interpreter,
        -- HTTP for FunctionGemma
        http-conduit,
        -- Logging for TUI interpreter
        monad-logger,
        http-client,
        regex-tdfa,
        vector,
        -- Code sampling
        random,
        -- OpenTelemetry
        hs-opentelemetry-api >= 0.1,
        hs-opentelemetry-sdk >= 0.1,
        hs-opentelemetry-exporter-otlp >= 0.1,
        -- Template rendering (for Graph/Templates.hs)
        mtl,
        ginger,
        parsec,
        yaml
    hs-source-dirs:   src
    default-language: GHC2024
    default-extensions:
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        DataKinds
        TypeFamilies
        TypeOperators

executable exomonad-control-server
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        directory,
        text >= 2.0 && < 3,
        exomonad-training-generator,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite stop-hook-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          StopHookSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite mailbox-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          MailboxToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite code-extraction-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          CodeExtractionSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        exomonad-teaching,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite exo-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ExoToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-env-interpreter,
        exomonad-core,
        text >= 2.0 && < 3,
        aeson,
        containers,
        time,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite pm-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        aeson,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite pm-propose-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMProposeSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings


test-suite pm-status-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMStatusSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        time,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite parser-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ParserSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite hook-policy-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          HookPolicySpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite feedback-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          FeedbackToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        aeson,
        freer-simple,
        directory,
        filepath,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite ssh-exec-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          SshExecSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite circuit-breaker-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          CircuitBreakerSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        text >= 2.0 && < 3,
        stm >= 2.5 && < 3,
        time >= 1.9 && < 2,
        containers,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite role-config-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          RoleConfigSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        containers,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite session-start-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          SessionStartSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        exomonad-git-interpreter,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications