cabal-version:      3.0
name:               exomonad-control-server
version:            0.1.0.0
synopsis:           Unix socket control server for Claude Code++ integration. Receives hook events from exomonad and direct HTTP MCP requests from Claude Code via Unix socket. Provides 7 MCP tools organized in tiers: LSP-only (Tier 1), LLM-enhanced (Tier 2), external orchestration (Tier 3), TUI-interactive (Tier 4), and mailbox communication (Tier 5).
description:        Receives hook events and MCP tool calls from exomonad
                    via NDJSON over Unix socket. Routes to effect handlers.
                    Includes semantic-scout for code exploration via LSP.
license:            MIT
author:             Inanna
build-type:         Simple

data-files:
    templates/scout/*.jinja
    templates/hook/*.jinja

extra-source-files:
    templates/scout/*.jinja
    templates/hook/*.jinja

common warnings
    ghc-options: -Wall -Wincomplete-patterns -Wredundant-constraints -Wunused-packages

library
    import:           warnings
    exposed-modules:
        -- Control server
        ExoMonad.Control.API
        ExoMonad.Control.Protocol
        ExoMonad.Control.Types
        ExoMonad.Control.Server
        ExoMonad.Control.Handler
        ExoMonad.Control.Logging
        ExoMonad.Control.Subprocess
        ExoMonad.Control.OpenObserve
        ExoMonad.Control.TUIInterpreter
        ExoMonad.Control.Runtime.Paths
        ExoMonad.Control.Hook.Policy
        ExoMonad.Control.Hook.CircuitBreaker
        ExoMonad.Control.Handler.Hook
        ExoMonad.Control.Observability
        ExoMonad.Control.Interpreters.Traced
        -- Hook implementations
        ExoMonad.Control.Hook.SessionStart
        ExoMonad.Control.Hook.SessionStart.Context
        ExoMonad.Control.Hook.GitHubRetry
        ExoMonad.Control.Hook.Stop
        ExoMonad.Control.Hook.Stop.Context
        ExoMonad.Control.PMStatus
        ExoMonad.Control.PMStatus.Types
        ExoMonad.Control.PMTools
        ExoMonad.Control.PMTools.Types
        ExoMonad.Control.ExoTools
        ExoMonad.Control.ExoTools.Internal
        ExoMonad.Control.ExoTools.Status
        ExoMonad.Control.ExoTools.Status.Types
        ExoMonad.Control.ExoTools.SpawnAgents
        ExoMonad.Control.ExoTools.SpawnAgents.Types
        ExoMonad.Control.ExoTools.SpawnAgents.Prompt
        ExoMonad.Control.ExoTools.SpawnCleanup
        ExoMonad.Control.ExoTools.FilePR
        ExoMonad.Control.ExoTools.FilePR.Types
        ExoMonad.Control.ExoTools.FilePR.Context
        ExoMonad.Control.ExoTools.PrReviewStatus
        ExoMonad.Control.ExoTools.PrReviewStatus.Types
        ExoMonad.Control.TUITools
        ExoMonad.Control.TUITools.Types
        ExoMonad.Control.RoleConfig
        -- Role DSL
        ExoMonad.Control.Role.Types
        ExoMonad.Control.Role.Reify
        -- Role DSL Tools
        ExoMonad.Control.Role.Tool.Definitions
        ExoMonad.Control.Role.Schema
        ExoMonad.Control.Role.Tool.Dispatch
        ExoMonad.Control.Role.Tool.Wiring
        -- Kaizen
        ExoMonad.Control.KaizenTools
        ExoMonad.Control.KaizenTools.Types
        -- TL
        ExoMonad.Control.TLTools
        ExoMonad.Control.TLTools.Types
        -- Role DSL Definitions
        ExoMonad.Control.Role.Definition.TL
        ExoMonad.Control.Role.Definition.Dev
        ExoMonad.Control.Role.Definition.PM
        -- Role DSL Registry
        ExoMonad.Control.Role.Registry
        ExoMonad.Control.Role.Handlers
        -- Role DSL Hooks
        ExoMonad.Control.Role.Hook.Definitions
        ExoMonad.Control.Role.Hook.Dispatch
        ExoMonad.Control.Role.Hook.Wiring
        ExoMonad.Control.Runtime
        ExoMonad.Control.GHTools
        ExoMonad.Control.GHTools.Types
        ExoMonad.Control.Combinators
        ExoMonad.Control.Export
        ExoMonad.Control.Version
        ExoMonad.Control.Version.TH
        -- StopHook (workflow stages)
        ExoMonad.Control.StopHook.Types
        ExoMonad.Control.StopHook.Graph
        ExoMonad.Control.StopHook.Handlers
        ExoMonad.Control.StopHook.Templates
        -- Circuit Breaker
        ExoMonad.Control.CircuitBreakerAdmin
        ExoMonad.Effect.CircuitBreaker
        ExoMonad.CircuitBreaker.Interpreter
        -- Workflow
        ExoMonad.Control.Workflow.Store
        -- Effects
        ExoMonad.Control.Effects.SshExec
        ExoMonad.Control.Effects.Effector
        ExoMonad.Control.Effects.Git
        ExoMonad.Control.Effects.Justfile
        ExoMonad.Control.Effects.DockerCtl
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        aeson-casing,
        bytestring >= 0.11 && < 1,
        base64-bytestring >= 1.2,
        async,
        directory,
        filepath,
        process,
        network >= 3.1 && < 4,
        stm >= 2.5 && < 3,
        managed >= 1.0,
        fast-logger >= 3.0 && < 4,
        time >= 1.9 && < 2,
        -- Servant / HTTP
        servant,
        servant-server,
        warp,
        -- Scout dependencies
        containers >= 0.6 && < 1,
        freer-simple,
        exomonad-core,
        exomonad-github-interpreter,
        exomonad-llm-interpreter,
        exomonad-git-interpreter,
        exomonad-env-interpreter,
        exomonad-worktree-interpreter,
        exomonad-filesystem-interpreter,
        exomonad-zellij-interpreter,
        exomonad-gemini-interpreter,
        exomonad-observability-interpreter,
        -- HTTP for FunctionGemma
        http-conduit,
        -- OpenTelemetry
        hs-opentelemetry-api >= 0.1,
        hs-opentelemetry-sdk >= 0.1,
        hs-opentelemetry-exporter-otlp >= 0.1,
        -- Template rendering (for Graph/Templates.hs)
        mtl,
        deriving-aeson >= 0.2,
        PyF >= 0.11,
        ginger,
        parsec,
        template-haskell,
        -- Lens
        generic-lens >= 2.2,
        lens >= 5.0
    hs-source-dirs:   src
    default-language: GHC2024
    default-extensions:
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        OverloadedLabels
        DataKinds
        TypeFamilies
        TypeOperators
        DuplicateRecordFields
        NoFieldSelectors

executable exomonad-control-server
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        directory,
        text >= 2.0 && < 3,
        exomonad-training-generator,
        managed >= 1.0,
        optparse-applicative >= 0.18,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite stop-hook-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          StopHookSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings


test-suite pm-status-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMStatusSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        time,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite hook-policy-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          HookPolicySpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite ssh-exec-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          SshExecSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite circuit-breaker-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          CircuitBreakerSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        stm >= 2.5 && < 3,
        time >= 1.9 && < 2,
        containers,
        tasty,
        tasty-hunit,
        aeson,
        freer-simple,
        lens
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite role-config-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          RoleConfigSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        exomonad-core,
        text >= 2.0 && < 3,
        containers,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

    default-extensions:
        OverloadedStrings

test-suite protocol-golden-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ProtocolGoldenSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        text >= 2.0 && < 3,
        aeson,
        bytestring,
        filepath,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite parsing-logic-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ParsingLogicSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        exomonad-control-server,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings