cabal-version:      3.0
name:               tidepool-control-server
version:            0.1.0.0
synopsis:           Unix socket control server for Claude Code++ hooks and MCP
description:        Receives hook events and MCP tool calls from mantle-agent
                    via NDJSON over Unix socket. Routes to effect handlers.
                    Includes semantic-scout for code exploration via LSP.
license:            MIT
author:             Inanna
build-type:         Simple

data-files:
    templates/scout/*.jinja
    templates/hook/*.jinja

common warnings
    ghc-options: -Wall -Wincomplete-patterns -Wredundant-constraints -Wunused-packages

library
    import:           warnings
    exposed-modules:
        -- Control server
        Tidepool.Control.Protocol
        Tidepool.Control.Types
        Tidepool.Control.Server
        Tidepool.Control.Handler
        Tidepool.Control.Logging
        Tidepool.Control.Handler.Hook
        Tidepool.Control.Handler.MCP
        -- Hook implementations
        Tidepool.Control.Hook.SessionStart
        Tidepool.Control.Hook.SessionStart.Context
        Tidepool.Control.LSPTools
        Tidepool.Control.PMTools
        Tidepool.Control.PMReviewDAG
        Tidepool.Control.PMStatus
        Tidepool.Control.PMPropose
        Tidepool.Control.MailboxTools
        Tidepool.Control.ExoTools
        Tidepool.Control.ExoTools.Internal
        Tidepool.Control.ExoTools.Status
        Tidepool.Control.ExoTools.Complete
        Tidepool.Control.ExoTools.Reconstitute
        Tidepool.Control.ExoTools.PreCommitCheck
        Tidepool.Control.ExoTools.SpawnAgents
        Tidepool.Control.ExoTools.FilePR
        Tidepool.Control.ExoTools.BeadToPr
        Tidepool.Control.ExoTools.PrToBead
        Tidepool.Control.ExoTools.PrReviewStatus
        Tidepool.Control.TUITools
        Tidepool.Control.Export
        -- Scout (semantic code exploration)
        Tidepool.Control.Scout.Types
        Tidepool.Control.Scout.EdgeTypes
        Tidepool.Control.Scout.Heuristics
        Tidepool.Control.Scout.LSP
        Tidepool.Control.Scout.Templates
        -- DocGen (teaching document generation)
        Tidepool.Control.Scout.DocGen
        Tidepool.Control.Scout.DocGen.Types
        Tidepool.Control.Scout.DocGen.Gemma
        Tidepool.Control.Scout.DocGen.Teacher
        Tidepool.Control.Scout.Tools
        -- Graph-based DocGen (tidepool DSL)
        Tidepool.Control.Scout.Graph
        Tidepool.Control.Scout.Graph.Types
        Tidepool.Control.Scout.Graph.Templates
        Tidepool.Control.Scout.Graph.Templates.Context
        Tidepool.Control.Scout.Graph.Handlers
        Tidepool.Control.Scout.Graph.Runner
    build-depends:
        base >= 4.17 && < 5,
        text >= 2.0 && < 3,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1,
        directory,
        filepath,
        network >= 3.1 && < 4,
        stm >= 2.5 && < 3,
        fast-logger >= 3.0 && < 4,
        time >= 1.9 && < 2,
        -- Scout dependencies
        containers >= 0.6 && < 1,
        freer-simple,
        tidepool-core,
        tidepool-tui-interpreter,
        tidepool-lsp-interpreter,
        tidepool-training-generator,
        tidepool-teaching,
        tidepool-bd-interpreter,
        tidepool-github-interpreter,
        tidepool-justfile-interpreter,
        tidepool-worktree-interpreter,
        tidepool-gemini-interpreter,
        -- HTTP for FunctionGemma
        http-conduit,
        vector,
        -- Code sampling
        random,
        -- Template rendering (for Graph/Templates.hs)
        mtl,
        ginger,
        parsec
    hs-source-dirs:   src
    default-language: GHC2024
    default-extensions:
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        DataKinds
        TypeFamilies
        TypeOperators

executable tidepool-control-server
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        directory,
        text >= 2.0 && < 3,
        tidepool-lsp-interpreter,
        tidepool-training-generator,
        aeson >= 2.1 && < 3,
        bytestring >= 0.11 && < 1
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite mailbox-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          MailboxToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite code-extraction-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          CodeExtractionSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        tidepool-teaching,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite exo-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ExoToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        aeson,
        containers,
        time,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite pm-tools-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMToolsSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        aeson,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite pm-propose-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMProposeSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings

test-suite pm-review-dag-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMReviewDAGSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        aeson,
        time,
        containers,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite pm-status-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          PMStatusSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        tidepool-core,
        text >= 2.0 && < 3,
        time,
        freer-simple,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
        TypeApplications

test-suite parser-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          ParserSpec.hs
    build-depends:
        base >= 4.17 && < 5,
        tidepool-control-server,
        text >= 2.0 && < 3,
        tasty,
        tasty-hunit
    hs-source-dirs:   test
    default-language: GHC2024
    default-extensions:
        OverloadedStrings
